portfolio 18 lustraciones ordenadas

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,15 +34,6 @@
 
                 <div class="imagenormal" onclick="">
                     <div class="imagezoom bg-one">
-                        <img alt="ilustration" src="https://cdnb.artstation.com/p/assets/images/images/049/957/813/large/z-h-a-m-i-s-k-a-green-golden-dragon-marca-1220x851.jpg?1653714609">
-                        <a href="https://cdnb.artstation.com/p/assets/images/images/049/957/813/large/z-h-a-m-i-s-k-a-green-golden-dragon-marca-1220x851.jpg?1653714609">
-                            Green golden dragon
-                        </a>
-                    </div>
-                </div>
-
-                <div class="imagenormal" onclick="">
-                    <div class="imagezoom bg-one">
                         <img alt="ilustration" src="https://cdnb.artstation.com/p/assets/images/images/049/957/811/large/z-h-a-m-i-s-k-a-division-marca-1286x851.jpg?1653714191">
                         <a href="https://cdnb.artstation.com/p/assets/images/images/049/957/811/large/z-h-a-m-i-s-k-a-division-marca-1286x851.jpg?1653714191">
                             Division
@@ -61,6 +52,15 @@
 
                 <div class="imagenormal" onclick="">
                     <div class="imagezoom bg-one">
+                        <img alt="ilustration" src="https://cdnb.artstation.com/p/assets/images/images/049/957/813/large/z-h-a-m-i-s-k-a-green-golden-dragon-marca-1220x851.jpg?1653714609">
+                        <a href="https://cdnb.artstation.com/p/assets/images/images/049/957/813/large/z-h-a-m-i-s-k-a-green-golden-dragon-marca-1220x851.jpg?1653714609">
+                            Green golden dragon
+                        </a>
+                    </div>
+                </div>
+
+                <div class="imagenormal" onclick="">
+                    <div class="imagezoom bg-one">
                         <img alt="ilustration" src="https://cdnb.artstation.com/p/assets/images/images/049/957/805/large/z-h-a-m-i-s-k-a-a-song-a-voice-marca-850x1201.jpg?1653714177">
                         <a href="https://cdnb.artstation.com/p/assets/images/images/049/957/805/large/z-h-a-m-i-s-k-a-a-song-a-voice-marca-850x1201.jpg?1653714177">
                             A song, a voice
@@ -73,6 +73,24 @@
                         <img alt="ilustration" src="https://cdna.artstation.com/p/assets/images/images/049/957/804/large/z-h-a-m-i-s-k-a-wellcome-knight-marca-1699x850.jpg?1653714566">
                         <a href="https://cdna.artstation.com/p/assets/images/images/049/957/804/large/z-h-a-m-i-s-k-a-wellcome-knight-marca-1699x850.jpg?1653714566">
                             Wellcome, night
+                        </a>
+                    </div>
+                </div>
+
+                <div class="imagenormal" onclick="">
+                    <div class="imagezoom bg-one">
+                        <img alt="ilustration" src="https://cdnb.artstation.com/p/assets/images/images/049/957/777/large/z-h-a-m-i-s-k-a-black-dragon-whit-flowers-marca-850x1134.jpg?1653714384">
+                        <a href="https://cdnb.artstation.com/p/assets/images/images/049/957/777/large/z-h-a-m-i-s-k-a-black-dragon-whit-flowers-marca-850x1134.jpg?1653714384">
+                            Black dragin with flowers
+                        </a>
+                    </div>
+                </div>
+
+                <div class="imagenormal" onclick="">
+                    <div class="imagezoom bg-one">
+                        <img alt="ilustration" src="https://cdna.artstation.com/p/assets/images/images/049/957/756/large/z-h-a-m-i-s-k-a-running-phantongrey-marca-851x1966.jpg?1653714298">
+                        <a href="https://cdna.artstation.com/p/assets/images/images/049/957/756/large/z-h-a-m-i-s-k-a-running-phantongrey-marca-851x1966.jpg?1653714298">
+                            Running Phantongrey
                         </a>
                     </div>
                 </div>
@@ -155,6 +173,15 @@
 
                 <div class="imagenormal" onclick="">
                     <div class="imagezoom bg-one">
+                        <img alt="ilustration" src="https://cdna.artstation.com/p/assets/images/images/049/957/780/large/z-h-a-m-i-s-k-a-queen-of-bones-marca-850x1142.jpg?1653714405">
+                        <a href="https://cdna.artstation.com/p/assets/images/images/049/957/780/large/z-h-a-m-i-s-k-a-queen-of-bones-marca-850x1142.jpg?1653714405">
+                            Queen of Bones
+                        </a>
+                    </div>
+                </div>
+
+                <div class="imagenormal" onclick="">
+                    <div class="imagezoom bg-one">
                         <img alt="ilustration" src="https://cdna.artstation.com/p/assets/images/images/049/957/770/large/z-h-a-m-i-s-k-a-rest-in-your-wings-like-in-clouds-marca-1227x850.jpg?1653714099">
                         <a href="https://cdna.artstation.com/p/assets/images/images/049/957/770/large/z-h-a-m-i-s-k-a-rest-in-your-wings-like-in-clouds-marca-1227x850.jpg?1653714099">
                             Rest in your wings like in clouds
@@ -164,9 +191,9 @@
 
                 <div class="imagenormal" onclick="">
                     <div class="imagezoom bg-one">
-                        <img alt="ilustration" src="https://cdna.artstation.com/p/assets/images/images/049/957/780/large/z-h-a-m-i-s-k-a-queen-of-bones-marca-850x1142.jpg?1653714405">
-                        <a href="https://cdna.artstation.com/p/assets/images/images/049/957/780/large/z-h-a-m-i-s-k-a-queen-of-bones-marca-850x1142.jpg?1653714405">
-                            Queen of Bones
+                        <img alt="ilustration" src="https://cdnb.artstation.com/p/assets/images/images/049/957/977/large/z-h-a-m-i-s-k-a-da-thing-marca-851x1100.jpg?1653714835">
+                        <a href="https://cdnb.artstation.com/p/assets/images/images/049/957/977/large/z-h-a-m-i-s-k-a-da-thing-marca-851x1100.jpg?1653714835">
+                            Da thing
                         </a>
                     </div>
                 </div>
